2D Curves Are Not Cutting Trough #114215

Closed
opened 2023-10-28 00:00:36 +02:00 by Adrian Ferguson · 1 comment

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 545.92

Blender Version
Broken: version: 3.6.5, branch: blender-v3.6-release, commit date: 2023-10-16 14:30, hash: cf1e1ed46b7e
Worked:

Short description of error
Created an SVG image in Inkscape out of a bitmap image and then imported the SVG into Blender. While the curves cut through as expected in Inkscape they don't in Blender. The internal curve though does cut through other parts of the outer curve.

Screenshot 2023-10-27 163810.png
Inkscape image

Screenshot 2023-10-27 163901.png
Imported SVG in Blender object mode

Screenshot 2023-10-27 164055.png
Imported SVG in Blender edit mode

Screenshot 2023-10-27 164204.png
Internal curve moved to another area of the outer curve where the cutting happens as expected.

Exact steps for others to reproduce the error

  • Open attached .blend file

Note that some segments do not make holes

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 545.92 **Blender Version** Broken: version: 3.6.5, branch: blender-v3.6-release, commit date: 2023-10-16 14:30, hash: `cf1e1ed46b7e` Worked: **Short description of error** Created an SVG image in Inkscape out of a bitmap image and then imported the SVG into Blender. While the curves cut through as expected in Inkscape they don't in Blender. The internal curve though does cut through other parts of the outer curve. [![Screenshot 2023-10-27 163810.png](/attachments/b1a42fdb-6a7b-4eb3-bce0-7b2d8cd397b9)](url) Inkscape image [![Screenshot 2023-10-27 163901.png](/attachments/2df87461-ca44-49cf-b654-eb4474962dd0)](url) Imported SVG in Blender object mode [![Screenshot 2023-10-27 164055.png](/attachments/fcbc9a83-40e2-499f-b723-ab43f768ccc7)](url) Imported SVG in Blender edit mode [![Screenshot 2023-10-27 164204.png](/attachments/60539dc3-8ea5-4945-a888-a9a729d163c9)](url) Internal curve moved to another area of the outer curve where the cutting happens as expected. **Exact steps for others to reproduce the error** - Open attached .blend file Note that some segments do not make holes
Adrian Ferguson added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-10-28 00:00:37 +02:00

Thanks for the report, @AdrianFerguson.

This reminds me of this other report:
#104241: 2D Fill issue with intersecting curves

However, the 2D curves in the file are not intersecting, indicating that the problem is something else.

I created a simplified file to help developers investigate.

Thanks for the report, @AdrianFerguson. This reminds me of this other report: #104241: 2D Fill issue with intersecting curves However, the 2D curves in the file are not intersecting, indicating that the problem is something else. I created a simplified file to help developers investigate.
Germano Cavalcante added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-02 13:09:55 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-10 12:56:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114215
No description provided.